// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Summary should render correctly the component when products is empty 1`] = `
<DocumentFragment>
  <div
    class="summary"
  >
    <h3>
      Order summary
    </h3>
    <div
      class="element"
    >
      <h4>
        Sub Total
      </h4>
      <div>
        $ 0.00 
      </div>
    </div>
    <hr />
    <div
      class="element total"
    >
      <h5>
        Total
      </h5>
      <div>
        $ 0.00
      </div>
    </div>
    <hr />
    <div
      class="submit"
    />
  </div>
</DocumentFragment>
`;

exports[`Summary should render correctly the component when user has coupon 1`] = `
<DocumentFragment>
  <div
    class="summary"
  >
    <h3>
      Order summary
    </h3>
    <div
      class="element"
    >
      <h4>
        Sub Total
      </h4>
      <div>
        $ 25.00 
      </div>
    </div>
    <div
      data-testid="discountDetails"
    >
      <hr />
      <div
        class="element"
      >
        <h4>
          Coupon Discount
        </h4>
        <div>
          % 10
        </div>
      </div>
      <div
        class="element"
      >
        <h4>
          Shipping Cost
        </h4>
        <div>
          <span>
            $ 3.99
          </span>
        </div>
      </div>
    </div>
    <hr />
    <div
      class="element total"
    >
      <h5>
        Total
      </h5>
      <div>
        $ 26.49
      </div>
    </div>
    <hr />
    <div
      class="submit"
    >
      <button
        data-testid="buyBtn"
      >
        Buy
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Summary should render correctly the component when user is NOT VIP 1`] = `
<DocumentFragment>
  <div
    class="summary"
  >
    <h3>
      Order summary
    </h3>
    <div
      class="element"
    >
      <h4>
        Sub Total
      </h4>
      <div>
        $ 25.00 
      </div>
    </div>
    <div
      data-testid="discountDetails"
    >
      <hr />
      0
      <div
        class="element"
      >
        <h4>
          Shipping Cost
        </h4>
        <div>
          <span>
            $ 3.99
          </span>
        </div>
      </div>
    </div>
    <hr />
    <div
      class="element total"
    >
      <h5>
        Total
      </h5>
      <div>
        $ 28.99
      </div>
    </div>
    <hr />
    <div
      class="submit"
    >
      <button
        data-testid="buyBtn"
      >
        Buy
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Summary should render correctly the component when user is VIP 1`] = `
<DocumentFragment>
  <div
    class="summary"
  >
    <h3>
      Order summary
    </h3>
    <div
      class="element"
    >
      <h4>
        Sub Total
      </h4>
      <div>
        $ 25.00 
      </div>
    </div>
    <div
      data-testid="discountDetails"
    >
      <hr />
      0
      <div
        class="element"
      >
        <h4>
          Shipping Cost
        </h4>
        <div>
          <span>
            Free
          </span>
        </div>
      </div>
    </div>
    <hr />
    <div
      class="element total"
    >
      <h5>
        Total
      </h5>
      <div>
        $ 25.00
      </div>
    </div>
    <hr />
    <div
      class="submit"
    >
      <button
        data-testid="buyBtn"
      >
        Buy
      </button>
    </div>
  </div>
</DocumentFragment>
`;
